<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proficiency Exercise</string>
    <string name="action_settings">Settings</string>
    <string name="register_heading">Register</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password2">Re-enter Password</string>
    <string name="name">Full Name</string>
    <string name="zip">Zip Code</string>
    <string name="edit">Edit Info</string>
    <string name="infinity">Project Infinity</string>
    <string name="regInfo">Registration Information</string>

</resources>
