<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Register">

    <TextView
        android:id="@+id/register"
        android:text="@string/register"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
    />

    <!-- Email -->
    <EditText
        android:id="@+id/emailEntry"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_below="@+id/register"
    />

    <!-- Password -->
    <EditText
        android:id="@+id/passwordEntry"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@+id/emailEntry"
    />

    <!-- Re-enter Password row -->
    <EditText
        android:id="@+id/password2Entry"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="25dp"
        android:inputType="textPassword"
        android:hint="@string/password2"
        android:layout_below="@id/passwordEntry"
    />

    <!-- First Name row -->
    <EditText
        android:id="@+id/nameEntry"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:layout_below="@id/password2Entry"
    />

    <!-- Last Name row -->
    <EditText
        android:id="@+id/zipEntry"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="25dp"
        android:inputType="textPersonName"
        android:hint="@string/zip"
        android:layout_below="@id/nameEntry"
    />

    <!-- Register Button -->
    <Button
        android:id="@+id/button_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/zipEntry"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="regClicked"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infinity"
        android:layout_below="@+id/button_reg"
        android:gravity="center|bottom"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
    />

</RelativeLayout>

