<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="infinity.register.userInfo">

    <TextView
        android:id="@+id/regInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:text="@string/regInfo"
    />

    <!-- Register Info -->
    <TextView
        android:id="@+id/info"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regInfo"
    />

    <!-- Edit Info Button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info"
        android:text="@string/edit"
        android:onClick="editClicked"
    />

    <!-- Infinity -->
    <TextView
        android:id="@+id/infinity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infinity"
        android:layout_below="@+id/info"
        android:gravity="center|bottom"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
